# kbp

./: LICENSE  README.md  pyproject.toml
configs/: default.yaml
docs/: theory.md
experiments/: run_h1.py  run_h2.py  run_routing.py  run_transfer.py
kbp/: __init__.py  baselines.py  effective_rank.py  extractor.py  kbp.py  metrics.py  probe.py  routing.py
notebooks/: demo.ipynb
scripts/: compute_effective_rank.py  evaluate_baselines.py  extract_hidden_states.py  train_probe.py
tests/: test_effective_rank.py  test_extractor.py  test_probe.py
