[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "kbp"
version = "0.1.0"
description = "Knowledge Boundary Probe: Detecting LLM Knowledge Boundaries via Internal Representation Geometry"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Anonymous ACL Submission"}
]
keywords = ["llm", "hallucination", "rag", "probing", "knowledge-boundary"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "accelerate>=0.26.0",
    "scikit-learn>=1.3.0",
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "datasets>=2.14.0",
    "tqdm>=4.65.0",
    "pyyaml>=6.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "einops>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
selfcheck = [
    "bert-score>=0.3.13",
    "sentence-transformers>=2.2.0",
]

[project.scripts]
kbp-extract = "scripts.extract_hidden_states:main"
kbp-train = "scripts.train_probe:main"
kbp-eval = "scripts.evaluate:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["kbp*", "scripts*", "experiments*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
